force-app/main/default/objects/Ops_Incident_Slack_Config__mdt/Ops_Incident_Slack_Config__mdt.object-meta.xml
<CustomObject>
    <description>Slack Named Credential settings for UAT Feedback notifications.</description>
    <label>Ops Incident Slack Config</label>
    <pluralLabel>Ops Incident Slack Configs</pluralLabel>
</CustomObject>