force-app/main/default/objects/Ops_Incident_Slack_Config__mdt/fields/Auto_Analyze_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Analyze_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Slack alerts @mention Claude with an analyze prompt.</description>
    <label>Auto Analyze Enabled</label>
    <type>Checkbox</type>
</CustomField>