force-app/main/default/objects/Ops_Incident_Slack_Config__mdt/fields/Project_Label__c.field-meta.xml
<CustomField>
    <fullName>Project_Label__c</fullName>
    <description>Consultancy label for this org/channel binding, e.g. ClientA-UAT.</description>
    <inlineHelpText>Shown in Slack so Claude knows which client/project this Feedback belongs to.</inlineHelpText>
    <label>Project Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>