force-app/main/default/objects/Ops_Incident_Slack_Config__mdt/fields/Slack_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Slack_Named_Credential__c</fullName>
    <label>Slack Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>